changing and autodeploy

--- a/views/about.jade
+++ b/views/about.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Aliquam erat volutpat. Donec in nulla a neque ornare pulvinar. Maecenas augue eros, bibendum ut egestas ac, tristique et neque.
+  h1 iCENTRAL Aliquam erat volutpat. Donec in nulla a neque ornare pulvinar. Maecenas augue eros, bibendum ut egestas ac, tristique et neque.
   section.css-table
     section.two-column
       section.cell
